Fix font size of front page big 'Machinekit' on mobile

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -57,6 +57,12 @@ body > header {
     font-size: 96pt;
 }
 
+#maintitle-mobile {
+    margin-top: 0.1em;
+    font-weight: 700;
+    font-size: 40pt;
+}
+
 
 nav ul {
   padding: 0;
